--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -1,11 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
-{% load static %}
 <html lang="pt-br">
 <head>
-
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Estoque</title>
     {% block link %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,91 +23,141 @@
     <!--Select2-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-
-    {% block css %}{% endblock css %}
-    <style>
-        body {
-            background: #D3D3D3;
-        }
-        .box {
-            background: #fff;
-            width: 1400px;
-            height: 800px;
-            position: 0;
-            left: 0;
-            right: 0;
-            top: 0;
-
-            margin: auto;
-        }
-        .box-radius {
-            border-radius: 100px;
-        }
-        a{
-            color: #000000;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="{% url 'core:index' %}">Controle de Estoque</a>
-
+<div class="navigation">
     {% if user.is_authenticated %}
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Produtos</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'produto:produto_add' %}">Cadastrar Produto</a>
-                    <a class="dropdown-item" href="{% url 'produto:produto_list' %}">Listar Produtos</a>
-                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_produto' %}">Relatório Produto</a>
-                </div>
-            </li>
-            <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Clientes</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'cliente:cliente_add' %}">Cadastrar Clientes</a>
-                    <a class="dropdown-item" href="{% url 'cliente:cliente_list' %}">Listar Clientes</a>
-                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_cliente' %}">Relatório Clientes</a>
-                </div>
-            </li>
-            <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Entrada</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'entrada:estoque_entrada_add' %}">Nova Entrada</a>
-                    <a class="dropdown-item" href="{% url 'entrada:estoque_entrada_list' %}">Listar Entradas</a>
-                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_entrada' %}">Relatório Entrada</a>
-                </div>
-            </li>
-            <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Saida</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'saida:estoque_saida_add' %}">Nova Saída</a>
-                    <a class="dropdown-item" href="{% url 'saida:estoque_saida_list' %}">Listar Saídas</a>
-                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_saida' %}">Relatório Saídas</a>
-                </div>
-            </li>
+    <ul>
+        <li>
+            <a href="{% url 'core:index' %}">
+                <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                <span class="title">{{user}}</span>
+            </a>
+        </li>
 
-        </ul>
-        <ul class="navbar-nav  px-3">
-            <li class="nav-item active">
-                <a href="{% url 'usuarios:sair' %}" class="nav-link">
-                    {{user}}/Sair
-                </a>
-            </li>
-        </ul>
+        <li class="list">
 
-        {% endif %}
-    </div>
-</nav>
+        </li>
+        <li class="list">
+            <a href="#">
+                <span class="icon"><ion-icon name="cart-outline"></ion-icon></span>
+                <span class="title">Produtos</span>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{% url 'produto:produto_add' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Cadastrar Produto
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'produto:produto_list' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Listar Produto
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'relatorio:relatorio_produto' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Relatorio
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="list">
+            <a href="#">
+                <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
+                <span class="title">Clientes</span>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{% url 'cliente:cliente_add' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Cadastrar Clientes
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'cliente:cliente_list' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Listar Clientes
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'relatorio:relatorio_cliente' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Relatorio
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="list">
+            <a href="#">
+                <span class="icon"><ion-icon name="bag-add-outline"></ion-icon></span>
+                <span class="title">Entradas</span>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{% url 'entrada:estoque_entrada_add' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Cadastrar Entrada
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'entrada:estoque_entrada_list' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Listar Entrada
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'relatorio:relatorio_entrada' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Relatorio
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="list">
+            <a href="#">
+                <span class="icon"><ion-icon name="bag-remove-outline"></ion-icon></span>
+                <span class="title">Saídas</span>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{% url 'saida:estoque_saida_add' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Cadastrar Saídas
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'saida:estoque_saida_list' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Listar Saídas
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'relatorio:relatorio_saida' %}">
+                        <span><ion-icon name="add-outline"></ion-icon></span>
+                        Relatorio
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="list">
+            <a href="#">
+                <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                <span class="title">Configurações</span>
+            </a>
+        </li>
+        <li class="list logout">
+            <a href="{% url 'usuarios:sair' %}">
+                <span class="icon"><ion-icon name="log-in-outline"></ion-icon></span>
+                <span class="title">Sair</span>
+            </a>
+        </li>
+    </ul>
+    {% endif %}
+</div>
 <br> <br> <br> <br>
 <div class="box box-radius">
     <div class="container-fluid text-center">
@@ -129,5 +178,7 @@
 <!-- Select2 -->
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 {% block js %} {% endblock js %}
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
