--- a/entrada/templates/estoque_entrada_detail.html
+++ b/entrada/templates/estoque_entrada_detail.html
@@ -29,6 +29,7 @@
                 <th>Produto</th>
                 <th>Quantidade</th>
                 <th>Saldo</th>
+                <th>Valor Total</th>
             </tr>
             </thead>
             <tbody>
@@ -37,6 +38,7 @@
                 <td>{{ obj.produto }}</td>
                 <td>{{ obj.quantidade }}</td>
                 <td>{{ obj.saldo }}</td>
+                <td>{{ obj.valor_total }}</td>
             </tr>
 
             {% endfor %}
