--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <!--Select2-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     {% endblock link %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block css %}
